# pikendus-backend

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pdm.toml  pyproject.toml
docs/: CHANGELOG.md  index.md
pikendus_backend/: PikendusWheelBuilder.py  __init__.py  __main__.py  calc_dep_f90.py  compile.py  fibo.py  gene_py_src.py  ligne_debug.py  main.py  pandore_build_system.py  structure.py  version_module.py
pikendus_backend/scripts/: calc_dep_f90.py  compile.py  gene_py_src.py  ligne_debug.py  version_module.py
tests/: coverage.conf  pyproject.toml  test_fibonacci.py  test_init.py  test_scripts.py  test_wheel.py
tests/ma_librairie/: CHANGELOG.md  README.md  __init__.py  item.py  pyproject.toml
tests/ma_librairie/c_src/: calcul.c  item.h
tests/ma_librairie/data_struct/: description.yaml  functions.fd  point.ds  rectangle.ds
tests/ma_librairie/f_src/: item.finc  ma_librairie.pyf
tests/ma_librairie/ma_librairie/: __init__.py
tests/ma_librairie/ma_librairie/c_src/: calcul.c
tests/ma_librairie/ma_librairie/f_src/: calcul.f  ma_librairie.pyf
tests/ma_librairie/tests/: coverage.conf  test_extension.py  test_init.py
tests/ma_librairie_no_struct/: pyproject.toml
tests/ma_librairie_no_struct/data_struct/: description.yaml
tests/ma_librairie_no_struct/ma_librairie/c_src/: calcul.c
tests/ma_librairie_no_struct/ma_librairie/f_src/: calcul.f  ma_librairie.pyf
