[build-system]
requires = ["pdm-backend~=2.0.6"]
build-backend = "pdm.backend"

[project]
name = "pikendus-backend"
dynamic = ["version"]
description = "A PEP517 compliant build backend, able to compile C and fortran source files"
authors = [
    { name = "Yann de Thé", email = "yann@johncloud.fr" },
]
dependencies = [
    "rich>=13.3",
    "setuptools-scm>=7.1",
    "pdm-backend>=2.0.6",
    "wheel>=0.40.0",
    "numpy>=1.24.3",
    "toml>=0.10.2",
    "networkx>=3.1",
]
requires-python = ">3.8"

[project.urls]
"Bug Tracker" = "https://gitlab.com/ydethe/pikendus-backend/issues"
Homepage = "https://gitlab.com/ydethe/pikendus-backend"
Source = "https://gitlab.com/ydethe/pikendus-backend"

[tool.pylint.main]
ignore-patterns = ["kt_*.py"]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
force-exclude = 'kt_.*.py'

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"kt_sbf.py" = ["E501"]
"kt_wg3_header.py" = ["E501"]
"kt_wg3.py" = ["E501"]
"kt_kass_edd.py" = ["E501"]
"kt_egnos_edd.py" = ["E501"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=pikendus_backend",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
    "pikendus_backend/",
]
excludes = [
    "tests",
    "examples",
    "build",
    "dev",
    "dist",
    "mockup",
    "ksy"
]
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
    "types-PyYAML>=6.0.12.9",
    "networkx-stubs>=0.0.1",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "mkdocs-material>=9.1.11",
]
test = [
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-mock~=3.8.2",
    "pytest-instafail~=0.4.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest-html~=3.1.1",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/pikendus_backend
    cp CHANGELOG.md docs
    mkdocs build --site-dir htmldoc
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    docstr-coverage pikendus_backend -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/doc_badge.svg
    coverage-badge -f -o htmldoc/cov_badge.svg
"""
