[build-system]
requires = ["pikendus-backend>=0.2.3"]
build-backend = "pikendus_backend.main"

[project]
name = "ma-librairie"
version = "0.1.0"
description = "Tester mon build backend"
authors = [
    { name = "Yann de Thé", email = "yann@johncloud.fr" },
]
dependencies = [
    "rich>=13.3",
    "setuptools-scm>=7.1",
    "numpy>=1.24.3",
]
requires-python = ">3.8"

[project.urls]
"Bug Tracker" = "https://gitlab.com/ydethe/ma-librairie/issues"
Homepage = "https://gitlab.com/ydethe/ma-librairie"
Source = "https://gitlab.com/ydethe/ma-librairie"

[tool.pikendus]
# c_compiler
# f_compiler
# linker
fflags="-g -Wpadded -Wpacked -Waliasing -Wampersand -Wsurprising -Wintrinsics-std -Wintrinsic-shadow -Wline-truncation -Wreal-q-constant -Wunused -Wunderflow -Warray-temporaries -ffixed-line-length-132 -fcray-pointer -Os -fd-lines-as-comments -mavx -funroll-loops -fexpensive-optimizations -fno-range-check -fbackslash -fimplicit-none"
cflags="-g -std=gnu99 -Wall"
# lflags
structure_description="data_struct/description.yaml"

[tool.pylint.main]
ignore-patterns = ["kt_*.py"]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
force-exclude = 'kt_.*.py'

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"kt_sbf.py" = ["E501"]
"kt_wg3_header.py" = ["E501"]
"kt_wg3.py" = ["E501"]
"kt_kass_edd.py" = ["E501"]
"kt_egnos_edd.py" = ["E501"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=ma_librairie",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]

[[tool.pdm.source]]
name = "local_test"
verify_ssl = false
url = "../../dist"
type = "find_links"

[tool.pdm.build]
includes = [
    "ma_librairie/",
]
excludes = [
    "tests",
    "examples",
    "build",
    "dev",
    "dist",
    "mockup",
    "ksy",
    "**/*.o",
    "**/*.d",
    "**/*.html",
    "**/*.xml"
]
editable-backend = "editables"
is-purelib = false

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3~=0.10.0",
]
test = [
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-mock~=3.8.2",
    "pytest-instafail~=0.4.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest-html~=3.1.1",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/ma_librairie
    pdoc --html --force --config latex_math=True -o htmldoc ma_librairie
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    docstr-coverage ma_librairie -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/doc_badge.svg
    coverage-badge -f -o htmldoc/cov_badge.svg
"""
